	 #1779138) (Gergely Szasz).
20071023 z80/{Makefile.am,z80_checks.h,z80_ops.c}: use enumerated feature checks
	 (patch #1785743) (Stuart).
20071023 ChangeLog: add more entries (Stuart).
20071024 fuse.c,if1.c,rzx.c,sound/{aosound.c,sdlsound.c},ui/gtk/debugger.c,
         ui.c,utils.c: tidy up error messages (Stuart).
20071024 ChangeLog,machine.c,machines/{Makefile.am,machines.h,pentagon.c,
	 pentagon1024.c},menu.c,roms/Makefile.am,settings.dat,settings.pl,
	 spectrum.h,tape.c: add Pentagon 512 and Pentagon 1024 emulation
	 (part of patch #1774492) (Q-Master).
20071024 machines/pentagon1024.c: move beta_reset() (Stuart).
20071024 widget/filesel.c: move INPUT_KEY_Return handler into a function
	 to simplify drive selection on Win32 (Stuart).
20071024 widget/filesel.c: add drive selection for Win32 (Stuart).
20071024 widget/filesel.c: fix compilation and improve error handling for
	 drive selection (Stuart).
20071025 machines/{pentagon.c,pentagon1024.c}: fix activation of Beta disk
	 interface on reset (Stuart).
20071025 man/fuse.1: updates for Pentagon 512/1024 emulation (Stuart).
20071025 fuse.c,widget/filesel.c: set error handling mode on Win32 (thanks,
	 Jon Needle), and use chdir() for drive selection on Win32 (Stuart).
20071026 ChangeLog,compat/{amiga/paths.c,unix/paths.c,win32/paths.c},
         configure.in: fix typos (Stuart).
20071027 menu.c,menu_data.dat,settings.pl: allow the +D ROM to be customised
         (Fred).
20071027 disk/disk.c: add #include <string.h> for various prototypes (Fred).
20071027 menu.c,menu_data.dat,settings.pl: rearrange ROMs (Stuart).
20071028 keyboard.c,ula.c: fix up ULA handling for 128K / +3 machines. Also
	 move a variable from keyboard.c to ula.c where it makes a lot more
	 sense for it to be. (Fixes bug #1821604).
20071028 z80/z80.pl: LD[DI]R were applying contention when they shouldn't on
	 the +3 (fixes bug #1821389).
20071104 ui/options.dat: fix letter case for "Issue 2 keyboard" option (Stuart).