@@ -33,7 +33,7 @@
 int pentagon_init( fuse_machine_info *machine );
 int pentagon512_init( fuse_machine_info *machine );
 int pentagon1024_init( fuse_machine_info *machine );
-int pentagon_port_contended( libspectrum_word port );
+int pentagon_port_from_ula( libspectrum_word port );
 
 int spec16_init( fuse_machine_info *machine );
 int spec_se_init( fuse_machine_info *machine );
@@ -42,7 +42,7 @@ int specplus2a_init( fuse_machine_info *machine );
 int specplus3e_init( fuse_machine_info *machine );
 
 int tc2048_init( fuse_machine_info *machine );
-int tc2048_port_contended( libspectrum_word port );
+int tc2048_port_from_ula( libspectrum_word port );
 int ts2068_init( fuse_machine_info *machine );
 
 #endif			/* #ifndef FUSE_MACHINES_H */
