@@ -72,7 +72,7 @@ int spec16_init( fuse_machine_info *machine )
   machine->reset = spec16_reset;
 
   machine->timex = 0;
-  machine->ram.port_contended = spec48_port_contended;
+  machine->ram.port_from_ula  = spec48_port_from_ula;
   machine->ram.contend_delay  = spec48_contend_delay;
   machine->ram.contend_delay_no_mreq = spec48_contend_delay;
 
