@@ -65,7 +65,7 @@ specplus2a_init( fuse_machine_info *machine )
   machine->reset = specplus2a_reset;
 
   machine->timex = 0;
-  machine->ram.port_contended	     = specplus3_port_contended;
+  machine->ram.port_from_ula	     = specplus3_port_from_ula;
   machine->ram.contend_delay	     = specplus3_contend_delay;
   machine->ram.contend_delay_no_mreq = specplus3_contend_delay_no_mreq;
 
